[gd_scene load_steps=14 format=3 uid="uid://b017hkmjytd2r"]

[ext_resource type="PackedScene" uid="uid://ccmys7n1kr5dj" path="res://Assets/towers/tower_4_toyrocket.blend" id="1_7b58c"]
[ext_resource type="Script" uid="uid://dlogweeik4k1b" path="res://tower.gd" id="2_dsn6p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3hbij"]
resource_local_to_scene = true
transparency = 1
albedo_color = Color(0.76662, 0.76662, 0.766619, 0.67451)
disable_receive_shadows = true

[sub_resource type="SphereMesh" id="SphereMesh_dsn6p"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_3hbij")
radius = 0.001
height = 0.001

[sub_resource type="SphereShape3D" id="SphereShape3D_8xdud"]
radius = 2.749

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_q16b7"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hpysq"]
animation = &"idle"

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_q312u"]

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_w77r1"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_k0g4d"]
graph_offset = Vector2(-170.898, 19.1326)
nodes/Animation/node = SubResource("AnimationNodeAnimation_hpysq")
nodes/Animation/position = Vector2(-160, 140)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_q16b7")
"nodes/Animation 2/position" = Vector2(-160, 300)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_q312u")
nodes/TimeScale/position = Vector2(200, 100)
nodes/attack/node = SubResource("AnimationNodeOneShot_w77r1")
nodes/attack/position = Vector2(36.7521, 216.687)
nodes/output/position = Vector2(400, 100)
node_connections = [&"TimeScale", 0, &"attack", &"attack", 0, &"Animation", &"attack", 1, &"Animation 2", &"output", 0, &"TimeScale"]

[sub_resource type="Animation" id="Animation_dvesp"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_gd3mv"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ah61t"]
_data = {
&"attack": SubResource("Animation_dvesp"),
&"idle": SubResource("Animation_gd3mv")
}

[node name="tower_4_toyrocket" instance=ExtResource("1_7b58c")]
script = ExtResource("2_dsn6p")
tower_type = 3

[node name="Wing_R" parent="." index="1"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 1.5895, 0.851759, -0.00094983)

[node name="Visible_Radius" type="MeshInstance3D" parent="." index="4"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("SphereMesh_dsn6p")

[node name="Shoot_Point" type="Marker3D" parent="." index="5"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0999999, 1.8, 0.200001)

[node name="Area3D" type="Area3D" parent="." index="6"]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" index="0"]
shape = SubResource("SphereShape3D_8xdud")

[node name="WeaponTimer" type="Timer" parent="." index="7"]
unique_name_in_owner = true

[node name="AnimationTree" type="AnimationTree" parent="." index="8"]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
tree_root = SubResource("AnimationNodeBlendTree_k0g4d")
anim_player = NodePath("../AnimationPlayer")
parameters/TimeScale/scale = 0.0
parameters/attack/active = 0.0
parameters/attack/internal_active = false
parameters/attack/request = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="9"]
libraries = {
&"": SubResource("AnimationLibrary_ah61t")
}
